UI Fix, "stable" version
Fix: the footer now displays at the bottom of the page
Add: scrollbar dark color theme, local istance of the Tachyons framework

--- a/web/master.css
+++ b/web/master.css
@@ -31,3 +31,9 @@
 .link {
   transition: unset !important;
 }
+* {
+  scrollbar-color: #42474a #1b1e1f;
+}
+.fg1 {
+  flex-grow: 1;
+}
